# holochain-rust

./: Cargo.toml
doc/holochain_101/src/: configuring_an_app.md  overview.md
net/: Cargo.toml
net/src/: ipc_net_worker.rs  lib.rs  p2p_network.rs
net/src/ipc/: ipc.rs  mod.rs
net_actor_system/: Cargo.toml
net_actor_system/src/: lib.rs  net_actor_system.rs  net_protocol.rs
net_connection/: Cargo.toml
net_connection/src/: lib.rs  net_connection.rs  net_connection_thread.rs  protocol.rs  protocol_wrapper.rs
net_ipc/: Cargo.toml
net_ipc/src/: ipc_client.rs  ipc_client_2.rs  lib.rs  socket.rs
net_ipc/tests/: echo_ipc_test.rs
test_bin/: Cargo.toml
test_bin/src/: ipc_network_suite.rs  test_bin_ipc.rs
