[package]
name = "holochain_test_bin"
version = "0.0.1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]

[dependencies]
holochain_core = { path = "../core" }
holochain_dna = { path = "../dna" }
holochain_agent = { path = "../agent" }
holochain_core_api = { path = "../core_api" }
holochain_cas_implementations = { path="../cas_implementations" }
holochain_net_connection = { path="../net_connection" }
holochain_net_ipc = { path="../net_ipc" }
tempfile = "3"

[[bin]]
name = "holochain_test_bin"
path = "src/main.rs"

[[bin]]
name = "test_bin_ipc"
path = "src/test_bin_ipc.rs"
